--- a/JunoWorkspace/integration_sh/pom.xml
+++ b/JunoWorkspace/integration_sh/pom.xml
@@ -42,7 +42,7 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.5.4</version>
 		</dependency>
-		
+
 		<!-- orm -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -110,6 +110,13 @@
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
+		</dependency>
+
+		<!-- log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 
 	</dependencies>
