--- a/JunoWorkspace/integration_sh/src/main/webapp/WEB-INF/web.xml
+++ b/JunoWorkspace/integration_sh/src/main/webapp/WEB-INF/web.xml
@@ -16,10 +16,21 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring-context.xml</param-value>
 	</context-param>
+	
+	<!-- 配置Log4J -->
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>classpath:log4j.properties</param-value>
+	</context-param>
 
 	<!-- 加载applicationContext.xml -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+	
+	<!-- 配置Log4jConfigListener -->
+	<listener>
+		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 
 	<!-- <servlet-mapping> <servlet-name>default</servlet-name> <url-pattern>*.js</url-pattern> 
