--- a/JunoWorkspace/integration_sh/pom.xml
+++ b/JunoWorkspace/integration_sh/pom.xml
@@ -126,6 +126,13 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<!-- tiles -->
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>3.0.5</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>integration_sh</finalName>
